tests/spec/emit/snapshots/specialized_impl_uses_ufcs.snap
---
source: tests/spec/emit/types.rs
description: "input: \ntype MyInt = int\n\nstruct Box<T> { val: T }\n\nimpl Box<MyInt> {\n  fn doubled(self) -> MyInt { self.val * 2 }\n}\n"
---
package main

type MyInt = int

type Box[T any] struct {
	val T
}

func Box_doubled(self Box[MyInt]) MyInt {
	return self.val * 2
}
