tests/spec/emit/snapshots/spread_arg_into_go_variadic.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nimport filepath \"go:path/filepath\"\n\nfn test(parts: Slice<string>) -> string {\n  filepath.Join(parts...)\n}\n"
---
package main

import "path/filepath"

func test(parts []string) string {
	return filepath.Join(parts...)
}
