tests/spec/emit/snapshots/spread_arg_into_native_slice_append.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test(s: Slice<int>, more: Slice<int>) -> Slice<int> {
    s.append(more...)
  }
---
package main

func test(s, more []int) []int {
	return append(s, more...)
}
