tests/spec/emit/snapshots/spread_arg_into_native_slice_append_assignment.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test(s: Slice<int>, more: Slice<int>) -> Slice<int> {
    let mut s = s
    s = s.append(more...)
    s
  }
---
package main

func test(s, more []int) []int {
	s_1 := s
	s_1 = append(s_1, more...)
	return s_1
}
