tests/spec/emit/snapshots/spread_arg_into_receiver_method_ufcs.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Logger {}
  
  impl Logger {
    pub fn push(self, entries: VarArgs<string>) {}
  }
  
  fn test(l: Logger, parts: Slice<string>) {
    Logger.push(l, parts...)
  }
---
package main

type Logger struct{}

func (l Logger) Push(_ ...string) {}

func test(l Logger, parts []string) {
	l.Push(parts...)
}
