tests/spec/emit/snapshots/spread_arg_with_leading_args_into_native_slice_append_assignment.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test(s: Slice<int>, extra: int, more: Slice<int>) -> Slice<int> {
    let mut s = s
    s = s.append(extra, more...)
    s
  }
---
package main

func test(s []int, extra int, more []int) []int {
	s_1 := s
	s_1 = append(s_1, append([]int{extra}, more...)...)
	return s_1
}
