tests/spec/emit/snapshots/spread_concrete_slice_into_go_any_variadic_wraps_to_any.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let xs = ["a", "b", "c"]
    fmt.Println(xs...)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	xs := []string{"a", "b", "c"}
	fmt.Println(lisette.SliceToAny(xs)...)
}
