tests/spec/emit/snapshots/spread_with_setup_preserves_sibling_eval_order.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn side_a() -> int { 1 }
  
  fn get_xs() -> Result<Slice<int>, error> { Ok([1, 2, 3]) }
  
  fn variadic(_first: int, _rest: VarArgs<int>) -> int { 0 }
  
  fn run() -> Result<int, error> {
    Ok(variadic(side_a(), get_xs()?...))
  }
---
package main

func sideA() int {
	return 1
}

func getXs() ([]int, error) {
	return []int{1, 2, 3}, nil
}

func variadic(_ int, _ ...int) int {
	return 0
}

func run() (int, error) {
	arg := sideA()
	ret, err := getXs()
	if err != nil {
		return 0, err
	}
	return variadic(arg, ret...), nil
}
